refactor phone auth flow
